--- a/video.html
+++ b/video.html
@@ -14,12 +14,12 @@ Los osos pandas estan muy bonitos.
 <source src = "mi proyecto/osospandas.mp4" type "video/mp4">
 <source src = "mi proyecto/osospandas.webn" type "video/webn"></center>
 </video>
-<p>Como ya dicho,El panda, oso panda o panda gigante (Ailuropoda melanoleuca) es una especie de mamÌfero del orden de los carnÌvoros y aunque hay una gran controversia al respecto, los ˙ltimos estudios de su ADN lo engloban entre los miembros de la familia de los osos (Ursidae), siendo el oso de anteojos su pariente m·s cercano, si bien este pertenece a la subfamilia de los tremarctinos. Por otro lado, el panda rojo pertenece a una familia propia e independiente; Ailuridae. La especie est· muy localizada. Nativo de China central, el panda gigante habita en regiones montaÒosas, principalmente las de Sichuan, hasta una altura de 3500 m s. n. m.<br>Los machos maduran sexualmente a los seis aÒos (los osos pandas salvajes m·s lento).
-Las hembras panda llegan a la madurez sexual en m·s o menos cuatro aÒos y se aparean cada dos o tres ya que no lo har·n si est·n cuidando de una crÌa.
-La panda gigante es fÈrtil ˙nicamente por dos o tres dÌas al aÒo, algunas veces en la primavera (marzo-mayo) y estar· preÒada de tres a cinco meses y dar· a luz generalmente a finales de verano, en el mes de agosto. 
-Ella puede contener el parto hasta que las condiciones ambientales sean Ûptimas para la supervivencia. Los cachorros nacen en ·rboles huecos o madrigueras ocultas alrededor de ramas y hierba seca.
-Los osos panda sÛlo crÌan a un cachorro, incluso si la madre da a luz a dos o m·s osos, elige cuidar a uno y abandonar a los otros.</p>
-<a href = "mi proyecto/osos pandas.docx"> Mas.inf aqui </a>
+<p>Como ya dicho,El panda, oso panda o panda gigante (Ailuropoda melanoleuca) es una especie de mam√≠fero del orden de los carn√≠voros y aunque hay una gran controversia al respecto, los √∫ltimos estudios de su ADN lo engloban entre los miembros de la familia de los osos (Ursidae), siendo el oso de anteojos su pariente m√°s cercano, si bien este pertenece a la subfamilia de los tremarctinos. Por otro lado, el panda rojo pertenece a una familia propia e independiente; Ailuridae. La especie est√° muy localizada. Nativo de China central, el panda gigante habita en regiones monta√±osas, principalmente las de Sichuan, hasta una altura de 3500 m s. n. m.<br>Los machos maduran sexualmente a los seis a√±os (los osos pandas salvajes m√°s lento).
+Las hembras panda llegan a la madurez sexual en m√°s o menos cuatro a√±os y se aparean cada dos o tres ya que no lo har√°n si est√°n cuidando de una cr√≠a.
+La panda gigante es f√©rtil √∫nicamente por dos o tres d√≠as al a√±o, algunas veces en la primavera (marzo-mayo) y estar√° pre√±ada de tres a cinco meses y dar√° a luz generalmente a finales de verano, en el mes de agosto. 
+Ella puede contener el parto hasta que las condiciones ambientales sean √≥ptimas para la supervivencia. Los cachorros nacen en √°rboles huecos o madrigueras ocultas alrededor de ramas y hierba seca.
+Los osos panda s√≥lo cr√≠an a un cachorro, incluso si la madre da a luz a dos o m√°s osos, elige cuidar a uno y abandonar a los otros.</p>
+<a href = "mi proyecto/Osos pandas.docx"> Mas.inf aqui </a>
 <br>
 <br>
 <br>
